--- a/Index.html
+++ b/Index.html
@@ -17,17 +17,17 @@
             <h1>Grocery List</h1>
         </div>
         <br>
-        <div class="shadow p-3 mb-5 bg-white rounded">
+        <div class="container-fluid shadow p-3 mb-5 bg-white rounded">
             <label for="grocery-item">Enter the grocery item to add:</label>
             <input type="text" name="user-input" id="grocery-item">
             <input type="submit" value="Add" id="add-button">
         </div>
     </div>
-    <div class="text-left text-dark bg-light">
+    <div class="container text-left text-dark bg-light w-50">
         <ul class="list-group" id="my-ul"></ul>  
     </div>
     
-    <script src="scripts/mainV2.js"></script>
+    <script src="scripts/mainV3.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
