--- a/Index2.html
+++ b/Index2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Grocery List</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
@@ -17,18 +17,16 @@
         </div>
         <br>
         <div class="container-fluid shadow p-3 mb-5 bg-white rounded">
-            <form class="input">
-                <label for="item">Enter the grocery item to add:</label>
-                <input type="text" name="item" id="item">
-                <button type="submit">Add Item</button>
-            </form>
+            <label for="grocery-item">Enter the grocery item to add:</label>
+            <input type="text" name="user-input" id="grocery-item">
+            <input type="submit" value="Add" id="add-button">
         </div>
     </div>
     <div class="container text-left text-dark bg-light w-50">
-        <ul class="list"></ul>
+        <ul class="list-group" id="my-ul"></ul>
     </div>
 
-    <script src="scripts/mainV4.js"></script>
+    <script src="scripts/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
