core functions minus quantity localStorage

--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="container text-left text-dark bg-light w-50">
-        <ul class="list"></ul>
+        <ul class="list-group"></ul>
     </div>
 
     <script src="scripts/mainV4.js"></script>
