--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
         <ul class="list-group"></ul>
     </div>
 
-    <script src="scripts/mainV4.js"></script>
+    <script src="scripts/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
